[package]
name = "ilos_guidance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = {version ="0.32", features = ["serde-serialize"]}
csv = "1.1"
tokio = { version = "1", features = ["full"], optional = true }
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_derive = { version = "1", optional = true }
cdr = {version = "0.2.4", optional = true}
clap = {version = "4", features = ["derive"], optional = true}

[profile.test] 
opt-level = 3

[features]
zenoh = ["dep:zenoh", "dep:tokio", "dep:serde", "dep:serde_derive", "dep:cdr", "dep:clap"]

[[bin]]
name = "ilos_circle"
required-features = ["zenoh"]

